Backing date for Gantt located in root

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "devextreme": "24.2.6",
-    "devextreme-angular": "24.2.6",
+    "devextreme": "24.1-stable",
+    "devextreme-angular": "24.1-stable",
     "devextreme-schematics": "^1.10.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
